--- a/src/app/pages/dashboard/left-panel/left-panel.component.html
+++ b/src/app/pages/dashboard/left-panel/left-panel.component.html
@@ -2,53 +2,77 @@
   <div class="wrapper-profile">
     <img src="/assets/icons/icon-user-avatar.svg" alt="Profile picture avata" class="profile-avatar">
     <div class="wrapper-text">
-      <h5 class="name">James Charles</h5>
-      <p class="user-type">Citizen</p>
+      <h5 class="name">Adam Lewis</h5>
+      <p class="user-type">Organization User</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <p style="color: #ccc; font-size: 16px; font-weight: 500;">Organization</p>
+      <small>Colombo Municipal Council</small>
     </div>
   </div>
 
   <div class="wrapper-menu">
     <ul>
+
+      <a routerLink="locations">
+        <li routerLinkActive="is-active">
+          <img src="/assets/icons/icon-dashboard.svg" alt="Location icon">
+          <p>Analytics</p>
+        </li>
+      </a>
+
       <a routerLink="locations">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-location.svg" alt="Location icon">
-          <p>My Locations</p>
+          <p>Locations</p>
         </li>
       </a>
       <a routerLink="bins">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-bin.svg" alt="Bin icon">
-          <p>My Bins</p>
+          <p>Bins</p>
         </li>
       </a>
 
-      <a routerLink="store">
+      <!-- <a routerLink="store">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-store.svg" alt="Store icon">
           <p>Store</p>
         </li>
+      </a> -->
+
+      <a routerLink="store">
+        <li routerLinkActive="is-active">
+          <img src="/assets/icons/icon-store.svg" alt="Store icon">
+          <p>Orders</p>
+        </li>
       </a>
 
-      <!-- <a routerLink="vehicles">
+      <a routerLink="vehicles">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-vehicle.svg" alt="Vehicle icon">
           <p>Vehicles</p>
         </li>
-      </a> -->
+      </a>
 
-      <a routerLink="vehicles">
+      <a routerLink="invoices">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-invoices.svg" alt="Vehicle icon">
           <p>Invoices</p>
         </li>
       </a>
 
-      <!-- <a routerLink="users">
+      <a routerLink="users">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-user.svg" alt="User icon">
           <p>Users</p>
         </li>
-      </a> -->
+      </a>
 
       <a (click)="logout()">
         <li>
