--- a/src/app/pages/dashboard/right-panel/bins/bin-create/bin-create.component.html
+++ b/src/app/pages/dashboard/right-panel/bins/bin-create/bin-create.component.html
@@ -18,7 +18,7 @@
           <input matInput placeholder="Name" name="name" ngModel required>
         </mat-form-field>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-6">
         <mat-form-field appearance="outline">
           <mat-label>Description</mat-label>
           <input matInput placeholder="Description" name="description" ngModel required>
@@ -28,6 +28,20 @@
         <mat-form-field appearance="outline">
           <mat-label>Capacity</mat-label>
           <input matInput placeholder="Capacity" name="capacity" ngModel required>
+        </mat-form-field>
+      </div>
+      
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <mat-form-field appearance="outline">
+          <mat-label>Location</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let l of locations" [value]="l.id">
+              {{l.name}} - {{l.address}}
+            </mat-option>
+          </mat-select>
         </mat-form-field>
       </div>
     </div>
