--- a/src/app/pages/dashboard/left-panel/left-panel.component.html
+++ b/src/app/pages/dashboard/left-panel/left-panel.component.html
@@ -2,27 +2,34 @@
   <div class="wrapper-profile">
     <img src="/assets/icons/icon-user-avatar.svg" alt="Profile picture avata" class="profile-avatar">
     <div class="wrapper-text">
-      <h5 class="name">Adam Lewis</h5>
-      <p class="user-type">Organization User</p>
+      <h5 class="name">Elvis Presly</h5>
+      <p class="user-type">Admin User</p>
     </div>
   </div>
 
-  <hr>
+  <!-- <hr> -->
 
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-md-12 text-center">
       <p style="color: #ccc; font-size: 16px; font-weight: 500;">Organization</p>
       <small>Colombo Municipal Council</small>
     </div>
-  </div>
+  </div> -->
 
   <div class="wrapper-menu">
     <ul>
 
-      <a routerLink="locations">
+      <a routerLink="analytics">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-dashboard.svg" alt="Location icon">
           <p>Analytics</p>
+        </li>
+      </a>
+
+      <a routerLink="organizations">
+        <li routerLinkActive="is-active">
+          <img src="/assets/icons/icon-company.svg" alt="Location icon">
+          <p>Organizations</p>
         </li>
       </a>
 
@@ -32,6 +39,7 @@
           <p>Locations</p>
         </li>
       </a>
+
       <a routerLink="bins">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-bin.svg" alt="Bin icon">
