--- a/src/app/pages/dashboard/right-panel/analytics/analytics.component.html
+++ b/src/app/pages/dashboard/right-panel/analytics/analytics.component.html
@@ -14,7 +14,7 @@
       <div class="stat-card">
         <div class="row">
           <div class="col-md-4">
-            <span class="count">4</span>
+            <span class="count">{{orgCount}}</span>
           </div>
           <div class="col-md-8 separator" style="text-align: left;">
             <p class="count-label">Organizations</p>
@@ -29,7 +29,7 @@
       <div class="stat-card">
         <div class="row">
           <div class="col-md-4">
-            <span class="count">10</span>
+            <span class="count">{{locationsCount}}</span>
           </div>
           <div class="col-md-8 separator" style="text-align: left;">
             <p class="count-label">Locations</p>
@@ -44,7 +44,7 @@
       <div class="stat-card">
         <div class="row">
           <div class="col-md-4">
-            <span class="count">12</span>
+            <span class="count">{{pvLocationsCount}}</span>
           </div>
           <div class="col-md-8 separator" style="text-align: left;">
             <p class="count-label">Pending Actions</p>
@@ -59,7 +59,7 @@
       <div class="stat-card">
         <div class="row">
           <div class="col-md-4">
-            <span class="count">5</span>
+            <span class="count">{{vehicleCount}}</span>
           </div>
           <div class="col-md-8 separator" style="text-align: left;">
             <p class="count-label">Vehicles</p>
