--- a/src/app/pages/email-verification/email-verification.component.html
+++ b/src/app/pages/email-verification/email-verification.component.html
@@ -10,7 +10,7 @@
 
   <p>We have sent you a verification email. Please check your inbox!</p>
 
-  <button mat-raised-button color="primary">Resend Email</button>
+  <button mat-raised-button color="primary" (click)="resendEmail()">Resend Email</button>
 
   
 </div>
