Added recyclable items icons to sidebar

--- a/src/app/pages/dashboard/left-panel/left-panel.component.html
+++ b/src/app/pages/dashboard/left-panel/left-panel.component.html
@@ -47,6 +47,13 @@
         </li>
       </a>
 
+      <a routerLink="store">
+        <li routerLinkActive="is-active">
+          <img src="/assets/icons/icon-recycle.svg" alt="Store icon">
+          <p>Recyclable Items</p>
+        </li>
+      </a>
+
       <!-- <a routerLink="store">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-store.svg" alt="Store icon">
@@ -57,7 +64,7 @@
       <a routerLink="store">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-store.svg" alt="Store icon">
-          <p>Orders</p>
+          <p>Store</p>
         </li>
       </a>
 
