--- a/src/app/pages/dashboard/right-panel/bins/bins-table/bins-table.component.html
+++ b/src/app/pages/dashboard/right-panel/bins/bins-table/bins-table.component.html
@@ -15,7 +15,7 @@
   </div>
 </header>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="bins" class="mat-elevation-z8">
 
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
@@ -23,19 +23,19 @@
   <!-- Position Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let element"> {{ element.name }} </td>
+    <td mat-cell *matCellDef="let element"> {{ element.bin_name }} </td>
   </ng-container>
 
   <!-- Name Column -->
   <ng-container matColumnDef="description">
     <th mat-header-cell *matHeaderCellDef>Description</th>
-    <td mat-cell *matCellDef="let element"> {{ element.description }} </td>
+    <td mat-cell *matCellDef="let element"> {{ element.bin_description }} </td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="location">
     <th mat-header-cell *matHeaderCellDef>Location</th>
-    <td mat-cell *matCellDef="let element"> {{ element.location }} </td>
+    <td mat-cell *matCellDef="let element"> {{ element.location_name }} </td>
   </ng-container>
 
   <!-- Weight Column -->
@@ -48,7 +48,7 @@
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef>Ready for pick up?</th>
     <td mat-cell *matCellDef="let element">
-      <mat-slide-toggle></mat-slide-toggle>
+      <button mat-flat-button color="primary">Ready to Pickup</button>
     </td>
   </ng-container>
 
