--- a/src/app/pages/dashboard/right-panel/bins/bin-create/bin-create.component.html
+++ b/src/app/pages/dashboard/right-panel/bins/bin-create/bin-create.component.html
@@ -15,19 +15,19 @@
       <div class="col-md-3">
         <mat-form-field appearance="outline">
           <mat-label>Name</mat-label>
-          <input matInput placeholder="Name" name="name" ngModel required>
+          <input matInput placeholder="Name" name="name" [(ngModel)]="name" required>
         </mat-form-field>
       </div>
       <div class="col-md-6">
         <mat-form-field appearance="outline">
           <mat-label>Description</mat-label>
-          <input matInput placeholder="Description" name="description" ngModel required>
+          <input matInput placeholder="Description" name="description" [(ngModel)]="description" required>
         </mat-form-field>
       </div>
       <div class="col-md-3">
         <mat-form-field appearance="outline">
           <mat-label>Capacity</mat-label>
-          <input matInput placeholder="Capacity" name="capacity" ngModel required>
+          <input matInput placeholder="Capacity" name="capacity" [(ngModel)]="capacity" required>
         </mat-form-field>
       </div>
       
@@ -37,9 +37,9 @@
       <div class="col-md-12">
         <mat-form-field appearance="outline">
           <mat-label>Location</mat-label>
-          <mat-select>
+          <mat-select [(ngModel)]="locationId" name="location">
             <mat-option *ngFor="let l of locations" [value]="l.id">
-              {{l.name}} - {{l.address}}
+              {{l.name}} - {{l.city}}
             </mat-option>
           </mat-select>
         </mat-form-field>
@@ -47,7 +47,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <button mat-raised-button color="primary" type="submit">Save bin</button>
+        <button mat-raised-button color="primary" type="submit" (click)="save()">Save bin</button>
       </div>
     </div>
   </form>
