--- a/src/app/pages/payment-information/payment-information.component.css
+++ b/src/app/pages/payment-information/payment-information.component.css
@@ -157,3 +157,17 @@
   -webkit-transform: rotateY(0deg);
   -moz-transform: rotateY(0deg);
 }
+
+.card-info-holder {
+  background-color: #f5f5f5;
+  padding: 20px;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.image-container {
+  height: 100%;
+  background-image: url('../../../assets/cute-bin.jpg');
+  background-size: cover;
+  margin-right: -20px;
+}
