--- a/src/app/pages/email-verification/email-verification.component.html
+++ b/src/app/pages/email-verification/email-verification.component.html
@@ -1,16 +1,34 @@
-<div style="margin-top: 15vh;" *ngIf="!Validating">
-  <p>
-    <!-- <img src="../../../assets/garbage.svg" width="50px" alt=""> -->
-  </p>
-  <p class="bindoo-subtitle">We are almost there!</p>
-  <h1 class="bindoo-heading" style="font-size: 48px; "><span style="color: #673ab7;">bin</span><span
-      style="color: #444;">doo</span></h1>
-  <small style="color: #aaa; font-size: 14px;">Step 2 / 3</small>
-  <p style="font-weight: 500;">Email Verification</p>
 
-  <p>We have sent you a verification email. Please check your inbox!</p>
 
-  <button mat-raised-button color="primary" (click)="resendEmail()">Resend Email</button>
+<div class="container-fluid">
+  <div class="row" style="height: 100vh;">
+    <div class="col-md-4 offset-md-1">
+      <div>
+        <div style="margin-top: 15vh;" *ngIf="!Validating">
+          <p>
+            <!-- <img src="../../../assets/garbage.svg" width="50px" alt=""> -->
+          </p>
+          <p class="bindoo-subtitle">We are almost there!</p>
+          <h1 class="bindoo-heading" style="font-size: 48px; "><span style="color: #673ab7;">bin</span><span
+              style="color: #444;">doo</span></h1>
+          <small style="color: #aaa; font-size: 14px;">Step 2 / 3</small>
+          <p style="font-weight: 500;">Email Verification</p>
+        
+          <p *ngIf="User">We have sent you a verification email to {{User.email}}. Please check your inbox!</p>
+          <div *ngIf="!User" style="height: 40px; width: 100%; background-color: #efefef4b; margin-bottom: 1.5rem;"></div>
+        
+          <button mat-raised-button color="primary" *ngIf="User" (click)="resendEmail()" style="margin-right: 10px;">Resend Email</button>
+          <button mat-stroked-button color="primary" *ngIf="User" (click)="logout()">Logout</button>
 
-  
+          <div *ngIf="!User" style="height: 40px; width: 100px; background-color: #efefef4b; display: inline-block; margin-right: 10px;"></div>
+          <div *ngIf="!User" style="height: 40px; width: 100px; background-color: #efefef4b; display: inline-block;"></div>
+
+          
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6 offset-md-1">
+      <div class="hidden-xs" class="image-container"></div>
+    </div>
+  </div>
 </div>
