--- a/src/app/pages/dashboard/left-panel/left-panel.component.html
+++ b/src/app/pages/dashboard/left-panel/left-panel.component.html
@@ -33,6 +33,13 @@
         </li>
       </a>
 
+      <a routerLink="councils" *ngIf="tokenResult.claims.userType === 3">
+        <li routerLinkActive="is-active">
+          <img src="/assets/icons/icon-company.svg" alt="Location icon">
+          <p>Councils</p>
+        </li>
+      </a>
+
       <a routerLink="locations">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-location.svg" alt="Location icon">
