Added recyclable items to navigation

--- a/src/app/pages/dashboard/left-panel/left-panel.component.html
+++ b/src/app/pages/dashboard/left-panel/left-panel.component.html
@@ -54,7 +54,7 @@
         </li>
       </a>
 
-      <a routerLink="store">
+      <a routerLink="recyclable-items">
         <li routerLinkActive="is-active">
           <img src="/assets/icons/icon-recycle.svg" alt="Store icon">
           <p>Recyclable Items</p>
