--- a/src/app/pages/dashboard/right-panel/vehicles/vehicles-table/vehicles-table.component.html
+++ b/src/app/pages/dashboard/right-panel/vehicles/vehicles-table/vehicles-table.component.html
@@ -15,7 +15,7 @@
   <!-- Position Column -->
   <ng-container matColumnDef="registrationNo">
     <th mat-header-cell *matHeaderCellDef>Registration No</th>
-    <td mat-cell *matCellDef="let element"> {{ element.registrationNo }} </td>
+    <td mat-cell *matCellDef="let element"> {{ element.registration_number }} </td>
   </ng-container>
 
   <!-- Name Column -->
