--- a/src/app/pages/dashboard/right-panel/locations/locations-view/locations-view.component.html
+++ b/src/app/pages/dashboard/right-panel/locations/locations-view/locations-view.component.html
@@ -46,8 +46,9 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let element">
-          <button mat-flat-button color="primary" *ngIf="userType === 1 || userType === 3">View</button>
-          <button mat-stroked-button color="warn" *ngIf="userType === 1 || userType === 3">Remove</button>
+          <button mat-flat-button color="primary" *ngIf="userType === 1 || userType === 3 || userType === 2">View</button>
+          <button mat-stroked-button color="warn" *ngIf="userType === 1" (click)="remove(element.id)">Remove</button>
+          <button mat-stroked-button color="warn" *ngIf="userType === 2 || userType === 3" (click)="suspend(element.id)">Suspend</button>
           <button mat-flat-button color="primary" *ngIf="(userType === 2 || userType === 3) && !element.verified" (click)="approve(element.id)">Approve</button>
         </td>
       </ng-container>
