--- a/src/app/pages/dashboard/right-panel/vehicles/vehicles-table/vehicles-table.component.html
+++ b/src/app/pages/dashboard/right-panel/vehicles/vehicles-table/vehicles-table.component.html
@@ -36,6 +36,14 @@
     <td mat-cell *matCellDef="let element"> {{ element.capacity }} </td>
   </ng-container>
 
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-flat-button color="primary">View</button>
+      <button mat-stroked-button color="warn">Remove</button>  
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
