--- a/src/app/pages/dashboard/right-panel/bins/bin-create/bin-create.component.html
+++ b/src/app/pages/dashboard/right-panel/bins/bin-create/bin-create.component.html
@@ -21,7 +21,7 @@
       <div class="col-md-6">
         <mat-form-field appearance="outline">
           <mat-label>Description</mat-label>
-          <input matInput placeholder="Description" name="description" [(ngModel)]="description" required>
+          <input matInput placeholder="Description" name="description" [(ngModel)]="description">
         </mat-form-field>
       </div>
       <div class="col-md-3">
