--- a/src/app/pages/dashboard/right-panel/bins/bins-table/bins-table.component.html
+++ b/src/app/pages/dashboard/right-panel/bins/bins-table/bins-table.component.html
@@ -4,6 +4,8 @@
       <h3>Bins</h3><br>
       <small style="position: relative; top: -5px; margin-bottom: 1.5rem;">View all bins from all your locations here</small><br>
       <button mat-raised-button color="primary" routerLink="add">+ Add bin</button>
+      <button mat-stroked-button color="primary" (click)="getAllBinsByCouncil()" *ngIf="!all">View All</button>
+      <button mat-stroked-button color="primary" (click)="getBinsByCouncilAndStatus()" *ngIf="all">View Ready for Pickup Only</button>
     </div>
     <div class="col-md-4">
       <mat-form-field appearance="outline" style="width: 100%;">
